feat: JavaNews - 4 new articles
Java 27 info + Java 26 overview + GraalVM versioning